--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                             <div class="user-related">
                                 <a data-bs-toggle="collapse" href="#desc-collapse" role="button" aria-expanded="false"
                                     aria-controls="desc-collapse">
-                                    <h5>Description</h5>
+                                    <h5 class="inner-header">Description</h5>
                                 </a>
                                 <div class="collapse" id="desc-collapse">
                                    <input class="form-control form-control-sm form-desc" type="text"
@@ -474,7 +474,97 @@
                     <div class="col-3 ">
                         <a data-bs-toggle="collapse" href="#upload-doc-collapse" role="button" aria-expanded="false"
                             aria-controls="upload-doc-collapse">
-                            <h5>Attach Document</h5>
+                            <h5 class="inner-header">Attach Document</h5>
+                        </a>
+                        <div class="collapse" id="upload-doc-collapse">
+                            <div class="card card-user-realted">
+                                <div class="card-body">
+                                    <div class="mb-3">
+                                        <input class="form-control form-control-sm" id="formFileSm" type="file">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3 project-cost">
+                        <input class="form-control form-control-sm form-control-cal" type="text"
+                            placeholder="Company GSTIN*" aria-label=".form-control-sm example">
+                        <i class="fa-solid fa-calendar-days cal-day1"></i>
+                    </div>
+                    <div class="col-3 task-cost">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+                            <label class="form-check-label" for="flexCheckChecked">
+                                Calculate from Task Cost
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card card-all">
+        <div class="card-body card-body-heading">
+            <a data-bs-toggle="collapse" href="#costing-collapse" role="button" aria-expanded="false"
+                aria-controls="costing-collapse">
+                <h5>Costing</h5>
+            </a>
+            <div class="collapse" id="costing-collapse">
+                <div class="row row-detail">
+                    <div class="col-3 cl-3">
+                        <input class="form-control form-control-sm form-control-cal" type="text"
+                            placeholder="Company GSTIN*" aria-label=".form-control-sm example">
+                        <i class="fa-solid fa-calendar-days cal-day1"></i>
+                    </div>
+                    <div class="col-3 cl-3 column-project-duration">
+                        <form>
+                            <select class="form-control form-control-sm" type="text" placeholder="Company GSTIN*"
+                                aria-label=".form-control-sm example">
+                                <option value="volvo">Volvo</option>
+                                <option value="saab">Saab</option>
+                                <option value="opel">Opel</option>
+                                <option value="audi">Audi</option>
+                            </select>
+                        </form>
+                        <i class="fa-solid fa-caret-down carret-duration"></i>
+                    </div>
+                    <div class="col-3 cl-3 column-leave">
+                        <form>
+                            <select class="form-control form-control-sm" type="text" placeholder="Company GSTIN*"
+                                aria-label=".form-control-sm example">
+                                <option value="volvo">Volvo</option>
+                                <option value="saab">Saab</option>
+                                <option value="opel">Opel</option>
+                                <option value="audi">Audi</option>
+                            </select>
+                        </form>
+                        <i class="fa-solid fa-caret-down carret-leave"></i>
+                    </div>
+                    <div class="col-3 cl-3">
+                        <input class="form-control form-control-sm" type="text" placeholder="Project Name*"
+                            aria-label=".form-control-sm example">
+                        <i class="fa-solid fa-calendar-days cal-day2"></i>
+                    </div>
+                </div>
+                <div class="row row-user-info">
+                    <div class="col-3">
+                        <div class="user-detail-info">
+                            <div class="user-related">
+                                <a data-bs-toggle="collapse" href="#desc-collapse" role="button" aria-expanded="false"
+                                    aria-controls="desc-collapse">
+                                    <h5 class="inner-header">Description</h5>
+                                </a>
+                                <div class="collapse" id="desc-collapse">
+                                   <input class="form-control form-control-sm form-desc" type="text"
+                                        placeholder="Description" aria-label=".form-control-sm example">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3 ">
+                        <a data-bs-toggle="collapse" href="#upload-doc-collapse" role="button" aria-expanded="false"
+                            aria-controls="upload-doc-collapse">
+                            <h5 class="inner-header">Attach Document</h5>
                         </a>
                         <div class="collapse" id="upload-doc-collapse">
                             <div class="card card-user-realted">
@@ -504,5 +594,4 @@
         </div>
     </div>
 </body>
-
 </html>
