--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
                 </a>
             </li>
             <li class="settings">
-                <a>
+                <a class="settings-bold">
                     <i class="fa-solid fa-gear"></i> Settings
                     <i class="fa-solid fa-xmark cross"></i>
                 </a>
             </li>
-            <li class="list1">
+            <li class="list1 list-report">
                 <a>
                     <i class="fa-solid fa-chart-column"></i> Reports
                     <i class="fa-solid fa-xmark cross"></i>
@@ -153,7 +153,7 @@
     <div class="project-section">
         <ul class="project">
             <li>
-                <a href="#">Project</a>
+                <a class="project-text" href="#">Project</a>
             </li>
             <li>
                 <i class="fa-solid fa-arrow-right"></i>
@@ -166,14 +166,14 @@
     <div>
         <div class="side-arrow-parent">
             <a>
-                <i class="fa fa-angle-left side-arrow" aria-hidden="true"></i></a><span>New Project</span>
+                <i class="fa fa-angle-left side-arrow" aria-hidden="true"></i><span>New Project</span></a>
         </div>
     </div>
 
     <div class="card card-all">
         <div class="card-body card-body-heading collapsed">
-            <a data-bs-toggle="collapse" href="#detail-collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
-                <h5>Detail</h5>
+            <a class="main-title" data-bs-toggle="collapse" href="#detail-collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
+                <h5>Details</h5>
             </a>
             <div class="collapse" id="detail-collapse">
                 <div class="row row-detail">
@@ -197,7 +197,7 @@
                     <div class="col-3 cl-3 column-project-lead">
                         <form>
                             <select class="form-control form-control-sm" type="text" placeholder="Company GSTIN*" aria-label=".form-control-sm example">
-                                <option value="volvo">Volvo</option>
+                                <option value="GSTIG">GSTIN</option>
                                 <option value="saab">Saab</option>
                                 <option value="opel">Opel</option>
                                 <option value="audi">Audi</option>
@@ -234,7 +234,7 @@
     </div>
     <div class="card card-all">
         <div class="card-body card-body-heading">
-            <a data-bs-toggle="collapse" href="#attach-doc-collapse" role="button" aria-expanded="false" aria-controls="attach-doc-collapse">
+            <a class="main-title" data-bs-toggle="collapse" href="#attach-doc-collapse" role="button" aria-expanded="false" aria-controls="attach-doc-collapse">
                 <h5>Schedule</h5>
             </a>
             <div class="collapse" id="attach-doc-collapse">
@@ -246,7 +246,7 @@
                     <div class="col-3 cl-3 column-project-duration">
                         <form>
                             <select class="form-control form-control-sm" type="text" placeholder="Company GSTIN*" aria-label=".form-control-sm example">
-                                <option value="volvo">Volvo</option>
+                                <option value="volvo">GSTIN</option>
                                 <option value="saab">Saab</option>
                                 <option value="opel">Opel</option>
                                 <option value="audi">Audi</option>
@@ -257,7 +257,7 @@
                     <div class="col-3 cl-3 column-leave">
                         <form>
                             <select class="form-control form-control-sm" type="text" placeholder="Company GSTIN*" aria-label=".form-control-sm example">
-                                <option value="volvo">Volvo</option>
+                                <option value="volvo">GST</option>
                                 <option value="saab">Saab</option>
                                 <option value="opel">Opel</option>
                                 <option value="audi">Audi</option>
@@ -284,6 +284,7 @@
                         </div>
                     </div>
                     <div class="col-3 cl-3">
+                        <div class="attach-doc" >
                         <a data-bs-toggle="collapse" href="#upload-doc-collapse" role="button" aria-expanded="false" aria-controls="upload-doc-collapse">
                             <h5 class="inner-header">Attach Document</h5>
                         </a>
@@ -296,6 +297,7 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
                     </div>
                     <div class="col-3 cl-3 project-cost">
                         <input class="form-control form-control-sm form-control-cal" type="text" placeholder="Company GSTIN*" aria-label=".form-control-sm example">
@@ -315,7 +317,7 @@
     </div>
     <div class="card card-all">
         <div class="card-body collapsed card-body-heading">
-            <a data-bs-toggle="collapse" href="#costing-collapse" role="button" aria-expanded="false" aria-controls="costing-collapse">
+            <a class="main-title"  data-bs-toggle="collapse" href="#costing-collapse" role="button" aria-expanded="false" aria-controls="costing-collapse">
                 <h5>Costing</h5>
             </a>
             <div class="collapse" id="costing-collapse">
@@ -344,7 +346,7 @@
                 </div>
                 <div class="user-detail-info">
                     <div class="user-related">
-                        <a data-bs-toggle="collapse" href="#cost-collapse" role="button" aria-expanded="false" aria-controls="cost-collapse">
+                        <a  data-bs-toggle="collapse" href="#cost-collapse" role="button" aria-expanded="false" aria-controls="cost-collapse">
                             <h5 class="inner-header">Actual Cost & Profit</h5>
                         </a>
                         <div class="collapse" id="cost-collapse">
@@ -364,11 +366,15 @@
                 </div>
                 <div class="button-section">
                     <button type="button" class="btn btn-outline-secondary">Cancel</button>
-                    <button type="button" class="btn btn-primary">Save as Draft
-                            <i class="fa-solid fa-caret-down "></i> 
+                    <button type="button" class="btn btn-primary button-save">Save as Draft 
+                        </button>
+                        <button type="button" class="btn btn-primary button-carret">
+                            <i class="fa-solid fa-caret-down"></i>
                         </button>
                 </div>
             </div>
+        </div>
+    </div>
 
 </body>
 
