collapse icon fixed

--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
     </div>
 
     <div class="card card-all">
-        <div class="card-body card-body-heading collapsed">
-            <a class="main-title" data-bs-toggle="collapse" href="#detail-collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <div class="card-body card-body-heading main-title">
+            <a class="collapsed" data-bs-toggle="collapse" href="#detail-collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
                 <h5>Details</h5>
             </a>
             <div class="collapse" id="detail-collapse">
@@ -233,8 +233,8 @@
         </div>
     </div>
     <div class="card card-all">
-        <div class="card-body card-body-heading">
-            <a class="main-title" data-bs-toggle="collapse" href="#attach-doc-collapse" role="button" aria-expanded="false" aria-controls="attach-doc-collapse">
+        <div class="card-body card-body-heading main-title">
+            <a class="collapsed" data-bs-toggle="collapse" href="#attach-doc-collapse" role="button" aria-expanded="false" aria-controls="attach-doc-collapse">
                 <h5>Schedule</h5>
             </a>
             <div class="collapse" id="attach-doc-collapse">
@@ -284,20 +284,20 @@
                         </div>
                     </div>
                     <div class="col-3 cl-3">
-                        <div class="attach-doc" >
-                        <a data-bs-toggle="collapse" href="#upload-doc-collapse" role="button" aria-expanded="false" aria-controls="upload-doc-collapse">
-                            <h5 class="inner-header">Attach Document</h5>
-                        </a>
-                        <div class="collapse" id="upload-doc-collapse">
-                            <div class="card card-user-realted">
-                                <div class="card-body">
-                                    <div class="mb-3">
-                                        <input class="form-control form-control-sm" id="formFileSm" type="file">
+                        <div class="attach-doc">
+                            <a data-bs-toggle="collapse" href="#upload-doc-collapse" role="button" aria-expanded="false" aria-controls="upload-doc-collapse">
+                                <h5 class="inner-header">Attach Document</h5>
+                            </a>
+                            <div class="collapse" id="upload-doc-collapse">
+                                <div class="card card-user-realted">
+                                    <div class="card-body">
+                                        <div class="mb-3">
+                                            <input class="form-control form-control-sm" id="formFileSm" type="file">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
                     </div>
                     <div class="col-3 cl-3 project-cost">
                         <input class="form-control form-control-sm form-control-cal" type="text" placeholder="Company GSTIN*" aria-label=".form-control-sm example">
@@ -316,8 +316,8 @@
         </div>
     </div>
     <div class="card card-all">
-        <div class="card-body collapsed card-body-heading">
-            <a class="main-title"  data-bs-toggle="collapse" href="#costing-collapse" role="button" aria-expanded="false" aria-controls="costing-collapse">
+        <div class="card-body collapsed card-body-heading main-title">
+            <a class="collapsed" data-bs-toggle="collapse" href="#costing-collapse" role="button" aria-expanded="false" aria-controls="costing-collapse">
                 <h5>Costing</h5>
             </a>
             <div class="collapse" id="costing-collapse">
@@ -346,7 +346,7 @@
                 </div>
                 <div class="user-detail-info">
                     <div class="user-related">
-                        <a  data-bs-toggle="collapse" href="#cost-collapse" role="button" aria-expanded="false" aria-controls="cost-collapse">
+                        <a data-bs-toggle="collapse" href="#cost-collapse" role="button" aria-expanded="false" aria-controls="cost-collapse">
                             <h5 class="inner-header">Actual Cost & Profit</h5>
                         </a>
                         <div class="collapse" id="cost-collapse">
@@ -368,7 +368,7 @@
                     <button type="button" class="btn btn-outline-secondary">Cancel</button>
                     <button type="button" class="btn btn-primary button-save">Save as Draft 
                         </button>
-                        <button type="button" class="btn btn-primary button-carret">
+                    <button type="button" class="btn btn-primary button-carret">
                             <i class="fa-solid fa-caret-down"></i>
                         </button>
                 </div>
