--- a/index.html
+++ b/index.html
@@ -221,13 +221,15 @@
                         <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
                     </div>
                 </div>
-                <div class="mt-4">
+                <div class=" row ">
+                    <div class="cl-3">
                     <a href="#">+ Another Person</a>
                 </div>
-                <div class="mt-2">
+                </div>
+                <div class="row mt-2">
                     <a href="#">+ Block /Wing Information</a>
                 </div>
-                <div class="mt-2">
+                <div class="row mt-2">
                     <a href="#">+ Payment Plan (S)</a>
                 </div>
             </div>
@@ -235,12 +237,14 @@
     </div>
     <div class="card card-all">
         <div class="card-body card-body-heading main-title">
-            <a class="collapsed" data-bs-toggle="collapse" href="#attach-doc-collapse" role="button" aria-expanded="false" aria-controls="attach-doc-collapse">
+            <div class="sub-header-container">
+                <a class="collapsed" data-bs-toggle="collapse" href="#attach-doc-collapse" role="button" aria-expanded="false" aria-controls="attach-doc-collapse">
                 <h5>Schedule</h5>
-            </a>
+                </a>
+            </div>
             <div class="collapse" id="attach-doc-collapse">
-                <div class="row row-detail">
-                    <div class="col-3 cl-3">
+                <div class="row row-detail">                  
+                    <div class="col-3 cl-3 padding-zero">
                         <input class="form-control form-control-sm form-control-cal" type="text" placeholder="Company GSTIN*" aria-label=".form-control-sm example">
                         <i class="fa-solid fa-calendar-days cal-day1"></i>
                     </div>
@@ -255,7 +259,7 @@
                         </form>
                         <i class="fa-solid fa-caret-down carret-duration"></i>
                     </div>
-                    <div class="col-3 cl-3 column-leave">
+                    <div class="col-3 cl-3 column-leave padding-zero">
                         <form>
                             <select class="form-control form-control-sm" type="text" placeholder="Company GSTIN*" aria-label=".form-control-sm example">
                                 <option value="volvo">GST</option>
@@ -272,7 +276,7 @@
                     </div>
                 </div>
                 <div class="row row-user-info">
-                    <div class="col-3 cl-3">
+                    <div class="col-3 ">
                         <div class="user-detail-info">
                             <div class="user-related">
                                 <a class="collapsed" data-bs-toggle="collapse" href="#desc-collapse" role="button" aria-expanded="false" aria-controls="desc-collapse">
@@ -285,7 +289,7 @@
                         </div>
                     </div>
                     
-                    <div class="col-3 cl-3">
+                    <!-- <div class="col-3">
                         <div class="attach-doc">
                             <a class="collapsed" data-bs-toggle="collapse" href="#upload-doc-collapse" role="button" aria-expanded="false" aria-controls="upload-doc-collapse">
                                 <h5 class="inner-header">Attach Document</h5>
@@ -294,18 +298,35 @@
                                 <div class="card card-user-realted">
                                     <div class="card-body">
                                         <div class="mb-3">
-                                            <input class="form-control form-control-sm" id="formFileSm" type="file">
+                                            <input  id="formFileSm" type="file">
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                    </div> -->
+                      <div class="col-3">
+                        <div class="attach-doc">
+                            <a class="collapsed" data-bs-toggle="collapse" href="#upload-doc-collapse" role="button" aria-expanded="false" aria-controls="upload-doc-collapse">
+                                <h5 class="inner-header">Attach Document</h5>
+                            </a>
+                            <div class="collapse" id="upload-doc-collapse">
+                                <div class=" card-user-realted">                                    
+                                        <div class="mb-3">
+                                             <form action="#" class="forn-upload">
+                                             <i class="fas fa-cloud-upload-alt"></i>
+                                             <p>Upload file</p>
+                                             </form>  
+                                        </div>                                   
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-3 cl-3 project-cost">
+                    <div class="col-3 cl-3 ">
                         <input class="form-control form-control-sm form-control-cal" type="text" placeholder="Company GSTIN*" aria-label=".form-control-sm example">
                         <i class="fa-solid fa-calendar-days cal-day1"></i>
                     </div>
-                    <div class="col-3 cl-3 task-cost">
+                    <div class="col-3 cl-3">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
                             <label class="form-check-label" for="flexCheckChecked">
@@ -338,7 +359,7 @@
                         <input class="form-control form-control-sm" type="text" placeholder="Project Name*" aria-label=".form-control-sm example">
                     </div>
                 </div>
-                <div class="row ">
+                <div class="row cost-gst">
                     <div class="col-3 cl-3">
                         <input class="form-control form-control-sm" type="text" placeholder="Company GSTIN*" aria-label=".form-control-sm example">
                     </div>
@@ -346,12 +367,14 @@
                         <input class="form-control form-control-sm" type="text" placeholder="Branch" aria-label=".form-control-sm example">
                     </div>
                 </div>
-                
+                <div class="row row-user-info">
                 <div class="user-detail-info">
                     <div class="user-related ">
+                        <div class="col-3 ">
                         <a class="collapsed" data-bs-toggle="collapse" href="#cost-collapse" role="button" aria-expanded="false" aria-controls="cost-collapse">
                             <h5 class="inner-header">Actual Cost & Profit</h5>
                         </a>
+                        </div>
                         <div class="collapse" id="cost-collapse">
                             <div class="row row-cost">
                                 <div class="col-3">
