--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-3">
+            <div class="col-3 company-related">
                 <ul class="list-item company-info">
                     <li>
                         <a>
@@ -110,15 +110,13 @@
                     </li>
                     <li>
                         <a class="company-name">
-                        Orchid Residancy Pvt. Ltd
+                        Orchid Residancy Pvt. Ltd.
                     </a>
                     </li>
                     <li>
                         <i class="fa-solid fa-caret-down"></i>
                     </li>
-
                 </ul>
-
             </div>
         </div>
     </header>
@@ -141,7 +139,9 @@
                     <i class="fa-solid fa-chart-column"></i> Reports
                     <i class="fa-solid fa-xmark cross"></i>
                 </a>
+                <div class="separate-line"></div>
             </li>
+            
             <li class="list1">
                 <a><i class=" fa-solid fa-building-columns "></i>
                 Banking
@@ -173,10 +173,11 @@
     <div class="card card-all">
         <div class="card-body  main-title">
             <a class="collapsed card-heading" data-bs-toggle="collapse" href="#detail-collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
-                <h5>Details</h5>
+                <h5 class="collapse-items">Details</h5>
                 <!-- <span class="accicon"><i class="fas fa-angle-down rotate-icon "></i></span> -->
             </a>
             <div class="collapse" id="detail-collapse">
+                <div class="divider"></div>
                 <div class="row row-detail">
                     <div class="col-3 cl-3">
                         <input class="form-control form-control-sm" type="text" placeholder="Company GSTIN*" aria-label=".form-control-sm example">
@@ -191,7 +192,7 @@
                         <input class="form-control form-control-sm" type="text" placeholder="Project Name*" aria-label=".form-control-sm example">
                     </div>
                 </div>
-                <div class="row row-detail-2">
+                <div class="row row-detail">
                     <div class="col-3 cl-3">
                         <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
                     </div>
@@ -207,7 +208,7 @@
                         <i class="fa-solid fa-caret-down carret-project-lead"></i>
                     </div>
                 </div>
-                <div class="row row-detail-2">
+                <div class="row row-detail">
                     <div class="col-3 cl-3">
                         <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
                     </div>
@@ -221,28 +222,27 @@
                         <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
                     </div>
                 </div>
-                <div class=" row ">
+                <div class=" row row-detail">
                     <div class="cl-3">
                         <a href="#">+ Another Person</a>
                     </div>
                 </div>
-                <div class="row mt-2">
+                <div class="row row-detail mt-2">
                     <a href="#">+ Block /Wing Information</a>
                 </div>
-                <div class="row mt-2">
+                <div class="row row-detail mt-2">
                     <a href="#">+ Payment Plan (S)</a>
                 </div>
             </div>
         </div>
     </div>
     <div class="card card-all">
-        <div class="card-body card-body-heading main-title">
-            <div class="sub-header-container">
-                <a class="collapsed" data-bs-toggle="collapse" href="#attach-doc-collapse" role="button" aria-expanded="false" aria-controls="attach-doc-collapse">
-                    <h5>Schedule</h5>
+        <div class="card-body main-title">
+                <a class="collapsed card-heading" data-bs-toggle="collapse" href="#attach-doc-collapse" role="button" aria-expanded="false" aria-controls="attach-doc-collapse">
+                    <h5 class="collapse-items">Schedule</h5>
                 </a>
-            </div>
             <div class="collapse" id="attach-doc-collapse">
+                <div class="divider"></div>
                 <div class="row row-detail">
                     <div class="col-3 cl-3 padding-zero">
                         <input class="form-control form-control-sm form-control-cal" type="text" placeholder="Company GSTIN*" aria-label=".form-control-sm example">
@@ -275,7 +275,7 @@
                         <i class="fa-solid fa-calendar-days cal-day2"></i>
                     </div>
                 </div>
-                <div class="row row-user-info">
+                <div class="row row-user-info row-detail">
                     <div class="col-3 ">
                         <div class="user-detail-info">
                             <div class="user-related">
@@ -312,7 +312,7 @@
                             </a>
                             <div class="collapse" id="upload-doc-collapse">
                                 <div class=" card-user-realted">
-                                    <div class="mb-3">
+                                    <div class="row-detail">
                                         <form action="#" class="forn-upload">
                                             <i class="fas fa-cloud-upload-alt"></i>
                                             <p>Upload file</p>
@@ -322,11 +322,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 cl-3 ">
+                    <div class="col-3 row-detail ">
                         <input class="form-control form-control-sm form-control-cal" type="text" placeholder="Company GSTIN*" aria-label=".form-control-sm example">
                         <i class="fa-solid fa-calendar-days cal-day1"></i>
                     </div>
-                    <div class="col-3 cl-3">
+                    <div class="col-3 cl-3 row-detail">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
                             <label class="form-check-label" for="flexCheckChecked">
@@ -339,40 +339,45 @@
         </div>
     </div>
     <div class="card card-all">
-        <div class="card-body collapsed card-body-heading main-title">
+        <div class="card-body main-title">
             <a class="collapsed" data-bs-toggle="collapse" href="#costing-collapse" role="button" aria-expanded="false" aria-controls="costing-collapse">
-                <h5 class="collapse-itms">Costing</h5>
+                <h5 class="collapse-items">Costing</h5>
             </a>
             <div class="collapse" id="costing-collapse">
                 <div class="divider"></div>
                 <div class="row row-detail">
-                    <div class="col-3 cl-3">
+                    <div class="col-3">
                         <input class="form-control form-control-sm form-control-cal" type="text" placeholder="Company GSTIN*" aria-label=".form-control-sm example">
                     </div>
-                    <div class="col-3 cl-3">
+                    <div class="col-3 ">
                         <input class="form-control form-control-sm form-control-cal" type="text" placeholder="Company GSTIN*" aria-label=".form-control-sm example">
 
                     </div>
-                    <div class="col-3 cl-3">
+                    <div class="col-3 ">
                         <input class="form-control form-control-sm form-control-cal" type="text" placeholder="Company GSTIN*" aria-label=".form-control-sm example">
                     </div>
-                    <div class="col-3 cl-3">
+                    <div class="col-3 ">
                         <input class="form-control form-control-sm" type="text" placeholder="Project Name*" aria-label=".form-control-sm example">
                     </div>
-                    <div class="col-3 cl-3">
+                </div>
+                    <div class="row row-detail">
+                    <div class="col-3" >
                         <input class="form-control form-control-sm" type="text" placeholder="Company GSTIN*" aria-label=".form-control-sm example">
                     </div>
-                    <div class="col-3 cl-3">
+                    <div class="col-3">
                         <input class="form-control form-control-sm" type="text" placeholder="Branch" aria-label=".form-control-sm example">
                     </div>
                 </div>
-                <div>
+                <div class="row actual-project-head ">
+                    <div class="col-3 ">
                     <div class="user-detail-info user-related">
                         <a class="collapsed" data-bs-toggle="collapse" href="#cost-collapse" role="button" aria-expanded="false" aria-controls="cost-collapse">
                             <h5 class="inner-header">Actual Cost & Profit</h5>
                         </a>
+                        </div>
+                    </div>
                         <div class="collapse" id="cost-collapse">
-                            <div class="row row-cost">
+                            <div class="row actual-project-row">
                                 <div class="col-3">
                                     <input class="form-control form-control-sm" type="text" placeholder="Branch" aria-label=".form-control-sm example">
                                 </div>
@@ -384,6 +389,7 @@
                                 </div>
                             </div>
                         </div>
+               
                     </div>
                     <div class="button-section">
                         <button type="button" class="btn btn-outline-secondary">Cancel</button>
@@ -393,10 +399,8 @@
                             <i class="fa-solid fa-caret-down"></i>
                         </button>
                     </div>
-                </div>
-            </div>
         </div>
-
+    </div>
 </body>
 
 </html>
